--- a/src/App/views/parts/footer.view.twig
+++ b/src/App/views/parts/footer.view.twig
@@ -14,6 +14,6 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
+        <p>&copy; 2024 TENTS. Todos los derechos reservados.</p>
     </div>
 </footer>
