--- a/src/App/views/portal-user/reservation.view.twig
+++ b/src/App/views/portal-user/reservation.view.twig
@@ -3,14 +3,14 @@
 {% block main %}
 <h1>{{ titulo }}</h1>
 <section id="beachResortData" class="ticket">
-  <label>Numero de reserva: {{ reservation.fields.reservationId }}</label>
-  <label>Balneario: {{ reservation.fields.beachResortName }}</label>
-  <label>Fecha desde: {{ reservation.fields.from }}</label>
-  <label>Fecha Hasta: {{ reservation.fields.to }}</label>
-    {% for unit in reservation.fields.units %}
+  <label>Numero de reserva: {{ reservationData.fields.reservationId }}</label>
+  <label>Balneario: {{ reservationData.fields.beachResortName }}</label>
+  <label>Fecha desde: {{ reservationData.fields.from }}</label>
+  <label>Fecha Hasta: {{ reservationData.fields.to }}</label>
+    {% for unit in reservationData.fields.units %}
   <label>Unidad: {{ unit }}</label>
    {%endfor%}
-  <label class="price-label">Precio:  ${{ reservation.fields.reservationAmount }}</label>        
+  <label class="price-label">Precio:  ${{ reservationData.fields.reservationAmount }}</label>        
 
 </section>
 
