--- a/src/App/views/portal-user/reservationConfirmation.view.twig
+++ b/src/App/views/portal-user/reservationConfirmation.view.twig
@@ -12,8 +12,7 @@
    {%endfor%}
   <label class="price-label">Precio:  ${{ data.reservationAmount }}</label>        
 
- <div id="wallet_container">
-    </div>
+ <div id="wallet_container"></div>
     <script>
       const mp = new MercadoPago('APP_USR-8e3ffee4-3787-49e9-817e-a6b76c0dcc5c', {
         locale: 'es-AR'
