--- a/src/App/views/parts/footer.view.twig
+++ b/src/App/views/parts/footer.view.twig
@@ -2,10 +2,10 @@
     <div class="footer-content">
         <h3>Contacto y Enlaces</h3>
         <ul>
-            <li><a href="#">Sobre Nosotros</a></li>
-            <li><a href="#">Política de Privacidad</a></li>
-            <li><a href="#">Términos de Servicio</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="/about">Sobre Nosotros</a></li>
+            <li><a href="/privacyPolicies">Política de Privacidad</a></li>
+            <li><a href="/termsOfServices">Términos de Servicio</a></li>
+            <li><a href="/contact">Contacto</a></li>
         </ul>
         <div class="social-media">
             <a class="facebook" href="#" class="facebook"><i class="fa-brands fa-facebook"></i> Facebook</a>
