--- a/src/App/views/portal-admin/editBeachResort.view.twig
+++ b/src/App/views/portal-admin/editBeachResort.view.twig
@@ -1,22 +1,146 @@
 {% extends "base.view.twig" %}
 
 {% block main %}
-    <h1>Edición de Balneario</h1>
-    <form class="newBeachResort" action="/submitBeachResort" method = "POST">  
-        <label for="name">Nombre:</label>
-        <input type="text" value="{{ beachResort[0].beach_resort_name }}" id="name" name="name" required>
+    <h1>Edición de balneario</h1>
+    <form class="newBeachResort" action="/submitEditBeachResort" method ="POST" enctype="multipart/form-data">  
         
+        <p class="required-message">Todos los campos son obligatorios.</p>
+
+        <input type="hidden" id="id" name="id" value="{{ beachResort.fields.id }}">
+
+        <label for="name">Nombre:</label>
+        <input type="text" id="name" name="name" required value="{{ beachResort.fields.name }}">
+    
         <label for="description">Descripción:</label>
-        <textarea id="description" name="description" required>{{ beachResort[0].beach_resort_description }}</textarea>
+        <textarea id="description" name="description" required>{{ beachResort.fields.description }}</textarea>
+
+       <section>
+            <label for="servicios">Servicios disponibles:</label>
+            <div class="services-container">
+                {% for service in services %}
+                    <div class="service-card">
+                        <input
+                            type="checkbox"
+                            id="{{ service.fields.name }}"
+                            name="services[]"
+                            value="{{ service.fields.id }}"
+                            {% for serviceBeachResort in servicesBeachResort %}
+                                {% if service.fields.id == serviceBeachResort.service %}
+                                    checked
+                                {% endif %}
+                            {% endfor %}
+                        >
+                        <label for="{{ service.fields.name }}">{{ service.fields.name }}</label>
+                    </div>
+                {% endfor %}
+            </div>
+        </section>
+
+
+        <label for="precioCarpas">Precio carpas:</label>
+        <input type="text" id="precioCarpas" name="precioCarpas" required pattern="\d+(\.\d{2})?" value="{{ precioCarpas }}">
+
+        <label for="precioSombrillas">Precio sombrillas:</label>
+        <input type="text" id="precioSombrillas" name="precioSombrillas" required pattern="\d+(\.\d{2})?" value="{{ precioSombrillas }}">
 
         <label for="ciudad">Ciudad:</label>
-        <select id="city" name="city" required>
+        <select id="city" name="city" onchange="cargarMapa()" required>
+            <option value="">Seleccione una ciudad</option>
             {% for city in cities %}
-                <option value="{{ city.fields.id }}">{{ city.fields.name }}</option>
+                <option {% if (beachResort.fields.city == city.fields.id) %}selected{% endif %} data-name="{{ city.fields.name }}" data-lat="{{ city.fields.lat }}" data-lon="{{ city.fields.lon }}" value="{{ city.fields.id }}">{{ city.fields.name }}</option>
             {% endfor %}
         </select>
-        <div>
+
+        <input type="hidden" id="longitud" name="longitud" value="{{ beachResort.fields.lon }}">
+        <input type="hidden" id="latitud" name="latitud" value="{{ beachResort.fields.lat }}">
+
+        <label id="lbStreet" for="street">Calle:</label>
+        <input type="text" id="street" name="street" required value="{{ beachResort.fields.street }}">
+        <label id="lbNumber" for="number">Numero:</label>
+        <input type="text" id="number" name="number" required value="{{ beachResort.fields.number }}">
+        <section class="conteinerBtnLocalizar">
+            <button type='button' id="btnLocalizar" class="btnLocalizar">Localizar</button>
+        </section>
+        
+        <section style="width:100%; height:50vh;" class="map" id="map"></section>
+ 
+        {% if error %}
+            <div class="error-message">
+                {{ error }}
+            </div>
+        {% endif %}
+
+        <section class="secctionBtn">
             <button class="bReserva" type="submit">Envíar</button>
-        </div>
+        </section>
     </form>
+{% endblock %}
+{% block javascript %}
+   <script>
+        const longitud = document.getElementById("longitud").value;
+        const latitud = document.getElementById("latitud").value;
+        var valueSelect = document.getElementById('city');
+        const selectedOption = valueSelect.options[valueSelect.selectedIndex];
+        const city = selectedOption.dataset.name;
+        
+        var map = L.map('map');
+
+        if (latitud && longitud) {
+            // Si hay coordenadas disponibles, posicionar el mapa y agregar un marcador
+            map.setView([latitud, longitud], 13);
+            var marker = L.marker([latitud, longitud], {draggable:true}).addTo(map);
+            marker.on('dragend', function(event){
+                var newLocation = this.getLatLng();
+                document.getElementById("latitud").value = newLocation.lat;
+                document.getElementById("longitud").value = newLocation.lng;
+            });
+        } else {
+            // Si no hay coordenadas, posicionar el mapa en un lugar por defecto
+            map.setView([-34.6037, -58.3816], 5);
+        }
+
+        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+        }).addTo(map);
+
+        const apiNominatim = async (calle, nro, ciudad, provincia, pais) => {
+            const response = await fetch('https://nominatim.openstreetmap.org/search?street='+calle+'+'+nro+'&city='+ciudad+'&state='+provincia+'&country='+pais+'&format=json');
+            const responseJSON = await response.json();
+            if (responseJSON.length !== 0) {
+                document.getElementById("longitud").value = responseJSON[0].lon;
+                document.getElementById("latitud").value = responseJSON[0].lat;
+                clearMarkers();
+                map.setView([responseJSON[0].lat, responseJSON[0].lon], 13);
+                var marker = L.marker([responseJSON[0].lat, responseJSON[0].lon], {draggable:true}).addTo(map);
+                marker.on('dragend', function(event){
+                    var newLocation = this.getLatLng();
+                    document.getElementById("latitud").value = newLocation.lat;
+                    document.getElementById("longitud").value = newLocation.lng;
+                });
+                markers.push(marker);
+                return true;
+            } else {
+                return false;
+            }
+        };
+
+        var markers = [];
+        // Función para limpiar todos los marcadores del mapa
+        function clearMarkers() {
+            markers.forEach(marker => map.removeLayer(marker));
+            markers = [];
+        }
+
+        const btnLocalizar = document.getElementById('btnLocalizar');
+
+        btnLocalizar.addEventListener('click', async function() {
+            clearMarkers();
+            let calle = document.getElementById('street').value;
+            let nro = document.getElementById('number').value;
+            let geoLocalizacion = await apiNominatim(calle, nro, city, 'Buenos Aires', 'Argentina');
+            if (!geoLocalizacion) {
+                alert('No se encontró la ubicación. Por favor, verifique la dirección.');
+            }
+        });
+    </script>
 {% endblock %}
