--- a/src/App/views/portal-admin/editCity.view.twig
+++ b/src/App/views/portal-admin/editCity.view.twig
@@ -2,14 +2,125 @@
 
 {% block main %}
     <h1>Edición de ciudad</h1>
-    <form class="newCity" action="/portal-admin/cities/edit" method = "POST" enctype="multipart/form-data">  
-        <input type="hidden" id="id" name="id" value= "{{ cityId }}" required>
+    <form class="newCity" action="/submitEditCity" method = "POST" enctype="multipart/form-data">  
+        
+        <p class="required-message">Todos los campos son obligatorios.</p>
+
+        <input type="hidden" id="id" name="id" value="{{ city.fields.id }}">
+
         <label for="name">Nombre:</label>
-        <input type="text" id="name" name="name" value = "{{cityName}}" required>
-        <label for="imagen">Selecciona una imagen:</label>
-        <input type="file" id="imagen" name="imagen" accept="image/*">
-        <section>
+        <input type="text" id="name" name="name" required value="{{ city.fields.name }}">
+        
+        <label for="province">Provincia:</label>
+        <select id="province" name="province" required>
+            <option value="Buenos Aires" {% if city.fields.province == "Buenos Aires" %}selected{% endif %}>Buenos Aires</option>
+            <option value="Catamarca" {% if city.fields.province == "Catamarca" %}selected{% endif %}>Catamarca</option>
+            <option value="Chaco" {% if city.fields.province == "Chaco" %}selected{% endif %}>Chaco</option>
+            <option value="Chubut" {% if city.fields.province == "Chubut" %}selected{% endif %}>Chubut</option>
+            <option value="Córdoba" {% if city.fields.province == "Córdoba" %}selected{% endif %}>Córdoba</option>
+            <option value="Corrientes" {% if city.fields.province == "Corrientes" %}selected{% endif %}>Corrientes</option>
+            <option value="Entre Ríos" {% if city.fields.province == "Entre Ríos" %}selected{% endif %}>Entre Ríos</option>
+            <option value="Formosa" {% if city.fields.province == "Formosa" %}selected{% endif %}>Formosa</option>
+            <option value="Jujuy" {% if city.fields.province == "Jujuy" %}selected{% endif %}>Jujuy</option>
+            <option value="La Pampa" {% if city.fields.province == "La Pampa" %}selected{% endif %}>La Pampa</option>
+            <option value="La Rioja" {% if city.fields.province == "La Rioja" %}selected{% endif %}>La Rioja</option>
+            <option value="Mendoza" {% if city.fields.province == "Mendoza" %}selected{% endif %}>Mendoza</option>
+            <option value="Misiones" {% if city.fields.province == "Misiones" %}selected{% endif %}>Misiones</option>
+            <option value="Neuquén" {% if city.fields.province == "Neuquén" %}selected{% endif %}>Neuquén</option>
+            <option value="Río Negro" {% if city.fields.province == "Río Negro" %}selected{% endif %}>Río Negro</option>
+            <option value="Salta" {% if city.fields.province == "Salta" %}selected{% endif %}>Salta</option>
+            <option value="San Juan" {% if city.fields.province == "San Juan" %}selected{% endif %}>San Juan</option>
+            <option value="San Luis" {% if city.fields.province == "San Luis" %}selected{% endif %}>San Luis</option>
+            <option value="Santa Cruz" {% if city.fields.province == "Santa Cruz" %}selected{% endif %}>Santa Cruz</option>
+            <option value="Santa Fe" {% if city.fields.province == "Santa Fe" %}selected{% endif %}>Santa Fe</option>
+            <option value="Santiago del Estero" {% if city.fields.province == "Santiago del Estero" %}selected{% endif %}>Santiago del Estero</option>
+            <option value="Tierra del Fuego" {% if city.fields.province == "Tierra del Fuego" %}selected{% endif %}>Tierra del Fuego</option>
+            <option value="Tucumán" {% if city.fields.province == "Tucumán" %}selected{% endif %}>Tucumán</option>
+        </select>
+
+        <input type="hidden" id="longitud" name="longitud" value="{{ city.fields.lon }}">
+        <input type="hidden" id="latitud" name="latitud" value="{{ city.fields.lat }}">
+
+        <section class="conteinerBtnLocalizar">
+            <button type='button' id="btnLocalizar" class="btnLocalizar">Localizar</button>
+        </section>
+        
+        <section style="width:100%; height:50vh" class="map" id="map"></section>
+
+        {% if error %}
+            <div class="error-message">
+                {{ error }}
+            </div>
+        {% endif %}
+
+        <section class="secctionBtn">
             <button class="bReserva" type="submit">Envíar</button>
         </section>
     </form>
+{% endblock %}
+
+{% block javascript %}
+    <script>
+        const longitud = document.getElementById("longitud").value;
+        const latitud = document.getElementById("latitud").value;
+        
+        var map = L.map('map');
+
+        if (latitud && longitud) {
+            // Si hay coordenadas disponibles, posicionar el mapa y agregar un marcador
+            map.setView([latitud, longitud], 13);
+            var marker = L.marker([latitud, longitud], {draggable:true}).addTo(map);
+            marker.on('dragend', function(event){
+                var newLocation = this.getLatLng();
+                document.getElementById("latitud").value = newLocation.lat;
+                document.getElementById("longitud").value = newLocation.lng;
+            });
+        } else {
+            // Si no hay coordenadas, posicionar el mapa en un lugar por defecto
+            map.setView([-34.6037, -58.3816], 5);
+        }
+
+        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+        }).addTo(map);
+
+        const apiNominatim = async (ciudad, provincia, pais) => {
+            const response = await fetch('https://nominatim.openstreetmap.org/search?city='+ciudad+'&state='+provincia+'&country='+pais+'&format=json');
+            const responseJSON = await response.json();
+            if (responseJSON.length !== 0) {
+                document.getElementById("longitud").value = responseJSON[0].lon;
+                document.getElementById("latitud").value = responseJSON[0].lat;
+                clearMarkers();
+                map.setView([responseJSON[0].lat, responseJSON[0].lon], 13);
+                var marker = L.marker([responseJSON[0].lat, responseJSON[0].lon], {draggable:true}).addTo(map);
+                marker.on('dragend', function(event){
+                    var newLocation = this.getLatLng();
+                    document.getElementById("latitud").value = newLocation.lat;
+                    document.getElementById("longitud").value = newLocation.lng;
+                });
+                markers.push(marker);
+                return true;
+            } else {
+                return false;
+            }
+        };
+
+        var markers = [];
+        // Función para limpiar todos los marcadores del mapa
+        function clearMarkers() {
+            markers.forEach(marker => map.removeLayer(marker));
+            markers = [];
+        }
+
+        const btnLocalizar = document.getElementById('btnLocalizar');
+
+        btnLocalizar.addEventListener('click', async function() {
+            let city = document.getElementById('name').value;
+            let province = document.getElementById('province').value;
+            let geoLocalizacion = await apiNominatim(city, province, 'Argentina');
+            if (!geoLocalizacion) {
+                alert('No se encontró la ubicación. Por favor, verifique la dirección.');
+            }
+        });
+    </script>
 {% endblock %}
