--- a/src/App/views/portal-admin/newBeachResort.view.twig
+++ b/src/App/views/portal-admin/newBeachResort.view.twig
@@ -63,7 +63,7 @@
 
         <label for="precioSombrillas">Precio sombrillas:</label>
         <input type="text" id="precioSombrillas" name="precioSombrillas" required pattern="\d+(\.\d{2})?">
-
+   
         <label for="ciudad">Ciudad:</label>
         <select id="city" name="city" onchange="cargarMapa()" required>
             <option value="">Seleccione una ciudad</option>
@@ -83,7 +83,7 @@
             <button type='button' style="display:none;" id="btnLocalizar" class="btnLocalizar">Localizar</button>
         </section>
         
-        <section style="width:100%; height:300px; display:none;" class="map" id="map"></section>
+        <section style="width:100%; height:50vh; display:none;" class="map" id="map"></section>
  
         {% if error %}
             <div class="error-message">
@@ -91,7 +91,7 @@
             </div>
         {% endif %}
 
-        <section>
+        <section class="secctionBtn">
             <button class="bReserva" type="submit">Envíar</button>
         </section>
 
