--- a/src/App/views/portal-user/index.view.twig
+++ b/src/App/views/portal-user/index.view.twig
@@ -55,7 +55,7 @@
                         <figure>
                             <img src="{{ city.fields.img }}" alt="{{ city.fields.name }}">
                         </figure>
-                        <p>Balnearios: 4</p>
+                        <p>Balnearios: {{ city.fields.cant_beach_resorts}}</p>
                     </article> 
                 </a>
             {% endfor %}                  
