datos de reserva y home admin.

--- a/src/App/views/portal-admin/inicio-usuario.view.twig
+++ b/src/App/views/portal-admin/inicio-usuario.view.twig
@@ -1,6 +1,6 @@
 {% extends "base.view.twig" %}
 {% block main %}
-    <section>
+    <section class="estadisticas">
         <article>
             <h1>{{ numberOfBeachResorts }}</h1>
             <p>Balnearios</p>
