--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -1525,3 +1525,16 @@ fieldset p{
   text-align: center;
 }
 
+.datosReserva {
+  text-align: left;
+  margin: auto;
+  width: 80%;
+  margin-bottom: 3em;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  background-color: #e5f6f6;
+}
+
+.estadisticas > article {
+  background-color: #e5f6f6;
+}
