--- a/src/App/views/portal-user/contact.view.twig
+++ b/src/App/views/portal-user/contact.view.twig
@@ -6,7 +6,7 @@
             <h2>Contáctanos</h2>
             <p>Si tienes alguna pregunta o necesitas asistencia, no dudes en ponerte en contacto con nosotros. Estaremos encantados de ayudarte.</p>
 
-            <form action="send_message.php" method="post">
+            <form action="/sendMessage" method="post">
                 <label for="name">Nombre:</label>
                 <input type="text" id="name" name="name" required>
 
